--- a/travis.yml
+++ b/travis.yml
@@ -18,7 +18,16 @@ install:
 script:
   - npm run serve
 
+after_success:
+  - git add --all .
+  - git commit --message "Automatically update from travis-ci"
+  - git push --quiet --force  "https://${GH_TOKEN}@${GH_REF}"
+
 #指定分支，只有指定的分支提交时才会运行脚本
 branches:
   only:
     - master
+
+env:
+  global:
+    - GH_REF: github.com/kitorv/study-notes
