--- a/package.json
+++ b/package.json
@@ -1,55 +1,38 @@
 {
   "name": "study-notes",
-  "version": "0.3.0",
-  "title": "Study Notes",
-  "description": "vue+markdown 学习笔记编译成网站",
-  "homepage": "http://www.kitorv.com",
-  "keywords": [
-    "vue",
-    "markdown",
-    "blog",
-    "web",
-    "frontend"
-  ],
-  "author": "kitorv",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/kitorv/study-notes"
-  },
-  "bugs": {
-    "url": "https://github.com/kitorv/study-notes/issues"
-  },
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --gh-pages",
-    "prerender": "vue-cli-service build --prerender",
+    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "dayjs": "^1.7.7",
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "core-js": "^3.6.5",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0-rc.5"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.2.0",
-    "@vue/cli-plugin-eslint": "^3.2.1",
-    "@vue/cli-service": "^3.2.0",
-    "@vue/eslint-config-prettier": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0-0",
-    "markdown-it": "^8.4.2",
-    "markdown-it-container": "^2.0.0",
-    "node-sass": "^4.11.0",
-    "prerender-spa-plugin": "^3.4.0",
-    "sass-loader": "^7.0.1",
-    "vue-markdown-loader": "^2.4.1",
-    "vue-template-compiler": "^2.5.17"
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^5.0.2",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-vue": "^7.0.0-0",
+    "node-sass": "^4.12.0",
+    "prettier": "^1.19.1",
+    "sass-loader": "^8.0.2",
+    "typescript": "~3.9.3"
   },
   "babel": {
     "presets": [
-      "@vue/app"
+      "@vue/cli-plugin-babel/preset"
     ]
   },
   "eslintConfig": {
@@ -58,25 +41,25 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
-      "@vue/prettier"
+      "plugin:vue/vue3-essential",
+      "eslint:recommended",
+      "@vue/typescript/recommended",
+      "@vue/prettier",
+      "@vue/prettier/@typescript-eslint"
     ],
-    "rules": {},
     "parserOptions": {
-      "parser": "babel-eslint"
-    }
+      "ecmaVersion": 2020
+    },
+    "rules": {}
   },
   "eslintIgnore": [
-    "**/*.md"
+    "dist/*",
+    "**/*.md",
+    "**/*.d.ts"
   ],
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 10"
+    "not dead"
   ]
 }
