--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
+    "highlight.js": "^10.4.0",
+    "markdown-it": "^12.0.2",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3"
+    "typescript": "~3.9.3",
+    "vue-loader": "^16.0.0-rc.2"
   },
   "babel": {
     "presets": [
@@ -50,7 +53,9 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {}
+    "rules": {
+      "@typescript-eslint/no-var-requires": "off"
+    }
   },
   "eslintIgnore": [
     "dist/*",
